# local-coding_agent

./: .gitignore  README.md  graph.md  main.py  memo.json  pyproject.toml  requirements.txt  run.sh
agent/: executor.py  graph.py  llm_client.py  main.py  planner.py  state.py  validator.py
agent/prompts/: coding.txt  system.txt
agent/tools/: ast_guard.py  file_tool.py  shell_tool.py
config/: config.yaml
docker/: Dockerfile
workspace/: sample.py
