[project]
name = "coding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astor>=0.8.1",
    "langgraph>=1.1.9",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "pytest>=8.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "ruff>=0.15.12",
]
